--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,5 +27,8 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.1.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:design:25.1.1'
+    compile 'com.google.android.gms:play-services-plus:6.5.87'
+    compile 'com.squareup.picasso:picasso:2.5.0'
+    compile 'com.squareup.retrofit:retrofit:1.9.0'
     testCompile 'junit:junit:4.12'
 }
